--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -46,6 +46,7 @@ http {
 	# Sendfile copies data between one FD and other from within the kernel,
 	# which is more efficient than read() + write(). Default is off.
 	sendfile on;
+	sendfile_max_chunk 1m;
 
 	# Causes nginx to attempt to send its HTTP response head in one packet,
 	# instead of using partial frames. Default is 'off'.
@@ -77,18 +78,22 @@ http {
 
 
 	# Enable gzipping of responses.
-	#gzip on;
+	gzip on;
+    gzip_disable "msie6";
 
-	# Set the Vary HTTP header as defined in the RFC 2616. Default is 'off'.
-	gzip_vary on;
-
+    gzip_min_length 10;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 9;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_types text/html text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
 	# Helper variable for proxying websockets.
-	map $http_upgrade $connection_upgrade {
-		default upgrade;
-		'' close;
-	}
-
+    # 	map $http_upgrade $connection_upgrade {
+    # 		default upgrade;
+    # 		'' close;
+    # 	}
 
 	# Specifies the main log format.
 	log_format main '$remote_addr - $remote_user [$time_local] "$request" '
