--- a/config/nginx/http.d/node.conf
+++ b/config/nginx/http.d/node.conf
@@ -20,6 +20,8 @@ server {
 		proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header        Host $http_host;
         proxy_pass              http://localhost:3000;
+
+        proxy_hide_header       X-Powered-By;
     }
 
 }
